--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -21,5 +21,6 @@ p {
 }
 
 .btn {
-  @apply w-52 px-5 py-2 font-bold text-white bg-primary-dark rounded shadow text-center transition duration-500 ease-in-out transform;
+  /* w-52 */
+  @apply px-5 py-2 font-bold text-white bg-primary-dark rounded shadow text-center transition duration-500 ease-in-out transform;
 }
